--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Tic Tac Toe</title>
-    <script src="game.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="grid-container">
